# sandbagging-purple-phase-1

./: README.md  pyproject.toml
src/: agent.py  executor.py  mcp_client.py  messenger.py  server.py
