[project]
name = "database-agent"
version = "0.1.0"
description = "Database agent that queries MCP for sandbagging audit"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[http-server]>=0.3.20",
    "httpx>=0.28.1",
    "mcp>=1.0.0",
    "pandas>=2.0.0",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
